<?xml version="1.0"?>
<package format="3">
  <name>urdf_demo</name>
  <version>0.0.1</version>
  <description>Simple car model for URDF demo</description>
  <maintainer email="krish@todo.todo">krish</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>robot_state_publisher</depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

